# ORCA

./: .gitignore  README.md  feedback.md  hyperlaneMigration.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  setup.md  skills-lock.json
agents/: .gitignore  README.md  pyproject.toml
agents/config/: orca-stub-protocols.example.json  orca-stub-protocols.json  orca.agents.json
agents/scripts/: fund_passport_token.py  fund_pieusd.py  fund_usdc.py  kpass-mock.cmd  kpass-mock.py  mint_usdc.py  mock-market-indexer.py  smoke_executor_vault.py
agents/src/orca_audit/: config.py  main.py  runtime.py
agents/src/orca_audit/services/: audit_llm_advisor.py
agents/src/orca_common/: __init__.py  agent_config.py  agents_env.py  events.py  internal_api.py  registry_client.py  signing.py  tx_sender.py  web3_rpc.py
agents/src/orca_common/llm/: __init__.py  deliberation.py  groq_client.py  prompts.py  risk_verdict.py  settings.py
agents/src/orca_executor/: config.py  main.py  path_resolution.py  runtime.py  spoke_prep.py  vault_tx.py
agents/src/orca_risk/: config.py  demo.py  main.py  runtime.py
agents/src/orca_scout/: __init__.py  config.py  main.py  models.py  scout_runtime.py
agents/src/orca_scout_agent.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
agents/tests/: test_agent_config.py  test_audit_llm.py  test_defillama_apy.py  test_executor_llm.py  test_feed_stub_chain.py  test_groq_client.py  test_path_resolution.py  test_risk_demo.py  test_risk_llm.py  test_scout_llm.py  test_spoke_prep.py  test_warp_to_stub.py  test_web3_rpc.py
(+325 files in other folders)
