[project]
name = "orca-scout-agent"
version = "0.1.0"
description = "ORCA Scout Agent runtime with live integration pathways."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "eth-account>=0.13.4",
  "httpx>=0.28.1",
  "pydantic>=2.11.0",
  "pydantic-settings>=2.11.0",
  "python-dotenv>=1.1.1",
  "redis>=6.4.0",
  "tenacity>=9.1.2",
  "web3>=7.14.0",
]

[project.scripts]
orca-scout = "orca_scout.main:main"
orca-risk = "orca_risk.main:main"
orca-executor = "orca_executor.main:main"
orca-audit = "orca_audit.main:main"

[build-system]
requires = ["setuptools>=69.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.24"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-p no:anchorpy"
